# lg-cli

./: .gitignore  CHANGELOG.md  README.md  README.old.md  README_vNext.md  backlog.md  migration_status.md  pyproject.toml  qodana.yaml  vulture.toml
.claude/agents/: code-inspector.md  test-advisor.md  test-runner.md
.github/: dependabot.yml
.github/workflows/: release.yml  verify-full.yml  verify.yml
docs/: CODE_ADAPTERS_DESIGN.md  adaptability.md  markdown-ast-based-design.tpl.md  markdown.md  md-placeholders-state.md  models.md  templates.md  tokenizers.md
docs/adaptability/: design.md  template-engine.md
docs/design/: function_bodies_refactoring.md
docs/en/: adaptability.md  adapters.md  markdown.md  templates.md  tokenizers.md
docs/ru/: adaptability.md  adapters.md  intro.md  markdown.md  templates.md  tokenizers.md
lg/: adaptive_utils.py  api_schema.py  cli.py  config.py  context.py  context_index.py  diag_report.schema.json  diag_report_schema.py  diagnostics.py  engine.py  engine_v2.py  errors.py  filters.py  lang.py  listing.py  paths.py  protocol.py  run_context.py  run_result.schema.json  scaffold.py  section_processor.py  stats.py  types.py  types_v2.py  utils.py  version.py
lg-cfg/: common.ctx.md  common.sec.yaml  config.yaml  dev-stage.sec.yaml  docs.ctx.md  docs.sec.yaml  guide.tpl.md  inner.tpl.md  models.yaml  modes.yaml  rules-agent-bottom.tpl.md  rules-agent-top.tpl.md  sections.yaml  tags.yaml  tests.ctx.md  tests.sec.yaml
lg-cfg/adaptability/: _.ctx.md  _.sec.yaml  analysis.md  architecture.md  cleaning.sec.yaml  common.sec.yaml  design.md  docs.sec.yaml  roadmap.md  sections.yaml  state-cleaning.tpl.md  state-template-engine.tpl.md  state.tpl.md  tz-cli.md  tz-intellij.md  tz-vscode.md  сleaning.sec.yaml
lg-cfg/adapters/: CODE_REVIEW_LITERALS_V2.md  LITERALS_V2_REFACTORING.md  TREE_SITTER.md  _.ctx.md  _.sec.yaml  agent.ctx.md  ask.ctx.md  budget.ctx.md  code_optimization_architecture.md  code_optimization_roadmap.md  comment_optimization_review.md  (+15 more)
lg_vnext/: api_schema.py  cli.py  diag_report.schema.json  diag_report_schema.py  diagnostics.py  engine.py  jsonic.py  run_result.schema.json  types.py
scripts/: build-and-install.sh  calibrate_budget_tests.py  check_tokenizer_availability.py  gen_coverage.sh  gen_models.sh  run_vulture.sh  test_adapters.sh  update_goldens.sh
tests/: conftest.py  test_adapter_python.py  test_adapters_registry.py  test_cache_fs.py  test_cache_integration.py  test_cli_code_fence.py  test_cli_context.py  test_cli_flags.py  test_cli_list_included.py  test_cli_minimum.py  test_cli_report_included_paths.py  test_cli_stats.py  test_config.py  test_config_loader.py  test_config_v6.py  test_context_nested.py  test_context_resolver.py  test_context_unit.py  test_core_fence.py  test_core_global.py  test_diag_rebuild_cache.py  test_empty_policy.py  test_file_labels.py  test_filters_engine.py  test_generator.py  test_grouping_by_section.py  test_hf_local_tokenizer.py  test_manifest_builder.py  test_manifest_builder_basic.py  test_manifest_builder_v2.py  test_markdown_adapter.py  test_markdown_drop_sections_and_markers.py  test_markdown_normalization.py  test_markdown_parser_basic.py  test_markdown_selectors_and_merge.py  test_path_labels.py  test_section_processor.py  test_section_processor_v2_integration.py  test_stats.py  test_stats_modes.py  (+2 more)
tests_vnext/: conftest.py  test_adapter_python.py  test_adapters_registry.py  test_cache_fs.py  test_cache_integration.py  test_cli_minimum.py  test_cli_report_included_paths.py  test_config_v6.py  test_context_nested.py  test_context_resolver.py  test_core_fence.py  test_diag_rebuild_cache.py  test_empty_policy.py  test_engine_report_stub.py  test_filters_engine.py  test_manifest_builder_basic.py  test_markdown_adapter.py  test_stats.py
(+1359 files in other folders)
