[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "listing-generator"
version = "0.3.0"
description = "Plain-text source listing generator for AI context"
authors = [{ name = "Your Team", email = "dev@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruamel.yaml>=0.18",
    "pathspec>=0.12",
    "tiktoken>=0.6",
    "pydantic>=2.0,<3.0",
]

[project.scripts]
listing-generator = "lg.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "datamodel-code-generator>=0.25",
]

[tool.setuptools.package-data]
# Включить все файлы пресетов и их вложения
"lg._skeletons" = ["**/*"]
