[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "listing-generator"
version = "0.9.0"
description = "Plain-text source listing generator for AI context"
authors = [{ name = "Maxim Morozov", email = "mmocentre@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
urls = { "Homepage" = "https://github.com/Max-Moro/lg-cli", "Source" = "https://github.com/Max-Moro/lg-cli", "Issues" = "https://github.com/Max-Moro/lg-cli/issues" }
requires-python = ">=3.10"
dependencies = [
    "ruamel.yaml>=0.18",
    "pathspec>=0.12",
    "tiktoken>=0.6",
    "tokenizers>=0.15",
    "sentencepiece>=0.2",
    "huggingface-hub>=0.20",
    "pydantic>=2.0,<3.0",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-javascript>=0.25",
    "tree-sitter-kotlin>=1.1.0",
]

[project.scripts]
listing-generator = "lg.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "datamodel-code-generator>=0.25",
    "vulture>=2.14",
]

# Additional languages for future iterations (M7)
extended-langs = [
    "tree-sitter-java",
    "tree-sitter-cpp",
    "tree-sitter-c",
    "tree-sitter-scala",
]

[tool.setuptools.packages.find]
include = ["lg*"]
exclude = ["test_cache*", "tests*"]

[tool.setuptools.package-data]
# Include all preset files and their nested contents
"lg._skeletons" = ["**/*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    # Suppress warnings from SWIG bindings in tree-sitter-languages
    "ignore:builtin type.*has no __module__ attribute:DeprecationWarning",
]